2001-04-12  Frank Warmerdam  <warmerdam@pobox.com>

	* ogdi/c-api/ogdi.def: added various capabilities related entry points.

	* ogdi/c-api/ecsdist.c, ogdi/include/ecs_util.h:
	Added ecs_GetPixelFromRGB() and ecs_GetRGBFromPixel().

	* test_suite/scripts/rpf: added test for Image support.

	* ogdi/drivers/rpf: rpf.c, rpf.h, object.c, utils.c

	Applied DND Image support patches, and added source headers.

	* ogdi/c-api: ecs_capabilities.c client.c
	ogdi/include/ecs_util.h

	Completed initial capabilities implemention in client.

	* contrib/ogdi_info/ogdi_info.c: added capabilities and extension
	dumping support.

	* test_suite/scripts/dted, test_suite/scripts/vpf: added capture 
	of capabilities documents.

	* configure, configure.in, config/generic.mak.in: added the ability
	to substitute for zlib using configure options.

	* ogdi/c-api/ecs_capabilities.c: initial implementation of
	_ecs_ParseCapabilities(), still incomplete.

	* ogdi/c-api/makefile: added ecs_capabilities.c

	* ogdi/c-api/client.c: added support for initializing and freeing
	new capabilities related fields in ecs_Client.

	* ogdi/include/ecs_utils.h: added ecs_LayerCapabilities, and additions
	to ecs_util.h.

	* configure.in, configure, config/common.mak, config/generic.mak.in:
		
	Added a support for linking in Expat, and controlling whether it is
	internal, external or disabled from configure.

	* external/expat/*: added using Expat release 1.95.1.

	* external/makefile: optionally add expat to subdirs.

2001-04-11  Frank Warmerdam  <warmerdam@pobox.com>

	* ogdi/drivers/vrf: vrf.c, utils.c, vrf.h
	Added ogdi_capabilities support. 

2001-04-10  Frank Warmerdam  <warmerdam@pobox.com>

	* ogdi/drivers/dted/dted.c: add ogdi_capabilities support.

	* contrib/ogdi_info/ogdi_info.c: added support for reporting Image
	values.

	* testsuite/scripts/dted: added Image test (test 3).

	* ogdi/drivers/dted: dted.c, dted.h, object.c, utils.c

	Upgraded with changes from DND to support Image layers.  Patch